# ili2py

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  Makefile  README.md  README.rst  index.html  objects.inv  pyproject.toml  report.md  tox.ini
.github/workflows/: build.yml  docs.yml  general.yml  test.yaml
build_executable/: index.html
cli/: index.html
code/ilismeta16/: index.html
data/: CoordSys-20151124.uml  IlisMeta16.ili  IlisMeta16.imd  Interlis_23.ili  LKSOB_Abwasser_V1_0.imd  LKSOB_Abwasser_V1_0.mmd  LKSOB_Abwasser_V1_0.puml  LKSOB_Abwasser_V1_0.py  Nutzungsplanung_V1_2.imd  OeREBKRM_V2_0_Themen.xml  OeREBKRMtrsfr_V2_0.ili  OeREBKRMtrsfr_V2_0.imd  OeREBKRMtrsfr_V2_0.mmd  OeREBKRMtrsfr_V2_0.puml  OeREBKRMtrsfr_V2_0.py  Planungszonen_V1_1.imd  Planungszonen_V1_1.puml  Planungszonen_V1_1.py  SIA405_Abwasser_2015_2_d-20180417.imd  SO_AFU_ABBAUSTELLEN_Publikation_20221103.ili  SO_AFU_ABBAUSTELLEN_Publikation_20221103.imd  SO_AFU_ABBAUSTELLEN_Publikation_20221103.puml  SO_AFU_ABBAUSTELLEN_Publikation_20221103.py  Units-20120220.imd  ch.Planungszonen.sh.mgdm.v1_1.xtf  index.html  interlis.xsd
dev_guide/python_classes/: index.html
dev_setup/: index.html
docs/: conf.py  index.rst  mkdocs.yml  spelling_wordlist.txt
docs/contents/: 10_introduction.rst  20_why_this_package.rst  30_usage.rst  40_modules.rst  ili2py.rst
docs/mkdocs/: HasRef.md  build_executable.md  index.md  installation.md  quick_start.md  style.css  uml.md
docs/mkdocs/code/: ilismeta16.md
docs/mkdocs/dev_guide/: python_classes.md
docs/mkdocs/documents/: overview.md
docs/mkdocs/documents/report/: report.md
docs/mkdocs/feature_status/: diagrams.md  ilismeta16.md  index.md  index_mapper.md  python_classes.md  questions.md
docs/mkdocs/user_guide/: cli-binary.md  cli-reference.md  diagram.md  python_classes.md  start.md
docs/presentation/: presentation.md
docs/presentation/img/: ilicompiler.md  ilitools.md  potential_way.md
docs/report/: report.md
documents/overview/: index.html
documents/report/data/: OeREBKRMtrsfr_V2_0.imd  Planungszonen_V1_1.imd  SO_AFU_ABBAUSTELLEN_Publikation_20221103.imd  ch.Planungszonen.sh.mgdm.v1_1.xtf  ch.bazl.kataster-belasteter-standorte-zivilflugplaetze_v2_0.oereb.xtf  ch.so.afu.abbaustellen.xtf
documents/report/example/: example.imd  example.pseudo.py
documents/report/report/: index.html
example/: example.ili  example.imd  example.pseudo.py
feature_status/: index.html
feature_status/diagrams/: index.html
feature_status/ilismeta16/: index.html
feature_status/index_mapper/: index.html
feature_status/python_classes/: index.html
feature_status/questions/: index.html
installation/: index.html
quick_start/: index.html
reports/detail_concept/: report.tex
reports/detail_concept/images/: interlis_compiler.md  interlis_imports_simple.md
samples/: IlisMeta16.pu
search/: search_index.json
src/ili2py/: __init__.py  __main__.py  cli.py  scripts.py  test1.py
src/ili2py/interfaces/ilismeta_16/: __init__.py  ilis_meta16.py
src/ili2py/interfaces/metamodel/: __init__.py  ili.py  ilismeta16.py
src/ili2py/interfaces/xsdata/: generator.py
src/ili2py/mappers/: helpers.py  python.py
src/ili2py/readers/: __init__.py  interlis_23.py
src/ili2py/readers_template/: __init__.py
src/ili2py/readers_template/interlis_23/: __init__.py  ruff.toml
src/ili2py/scripts/: generate_docs_diagrams.py  generate_mermaid_diagrams.py  generate_plantuml_diagrams.py  generate_test_output.py
src/ili2py/writers/: helpers.py
src/ili2py/writers/diagram/: __init__.py
src/ili2py/writers/py/: __init__.py  constraints.py  python_structure.py  render.py
src/ili2py/writers/uml/: __init__.py
tests/: smoke_test.py  test_cli.py  test_invoking_cli.py
tests/data/: Dockerfile  Makefile  README.md  prepare_meta_models.sh
tests/data/ilismeta16/: IlisMeta16.imd  IlisMeta16.xsd  README.md
tests/data/models/DMAVTYM_Alles_V1_0/: DMAVTYM_Alles_V1_0.ili  DMAVTYM_Alles_V1_0.imd
tests/data/models/DMAVTYM_Tous_V1_0/: DMAVTYM_Tous_V1_0.ili
tests/data/models/Elektrische_Anlagen_Nennspannung_36kV_V1_0/: ElektrischeAnlagenNennspannungUeber36kV_V1.imd
tests/data/models/Fruchtfolgeflaechen_V1/: Fruchtfolgeflaechen_V1.imd
tests/data/models/Gewaesserraum_V1_1/: Gewaesserraum_Codetexte_V1_1.xml  Gewaesserraum_LegendeEintrag_V1_1.imd  Gewaesserraum_V1_1.imd
tests/data/models/Grundwasservorkommen_V2_0/: Grundwasservorkommen_V2_0.imd
tests/data/models/Hazard_Mapping_V1_3/: Hazard_Mapping_V1_3.imd
tests/data/models/Holznutzungsbewilligung_V1/: Holznutzungsbewilligung_V1_0.ili  Holznutzungsbewilligung_V1_0.imd
tests/data/models/Inventar_Wasserentnahmen_V1_1/: InventarWasserentnahmen_V1_1.imd
tests/data/models/Kantonale_Ausnahmetransportrouten_V1_0/: ExceptionalLoadsRoute_Catalogue_V1.xml  ExceptionalLoadsRoute_V1.ili  ExceptionalLoadsRoute_V1.imd
tests/data/models/Kataster_belasteter_Standorte_V1_5/: KbS_Codetexte_V1_5.xml  KbS_V1_5.imd
tests/data/models/LWB_Bewirtschaftungseinheiten_V2_0/: LWB_Bewirtschaftungseinheiten_V2_0.imd
tests/data/models/LWB_Bewirtschaftungseinheiten_V3_0/: LWB_Bewirtschaftungseinheiten_V3_0.imd
tests/data/models/LWB_Biodiversitaetsfoerderflaechen_Qualitaet_II_und_Vernetzung_V2_0/: LWB_Biodiversitaetsfoerderflaechen_Qualitaet_II_und_Vernetzung_V2_0.imd
tests/data/models/LWB_Nutzungsflaechen_V2_0/: LWB_Nutzungsflaechen_Kataloge_V2_0_20241031.xml  LWB_Nutzungsflaechen_V2_0.imd
tests/data/models/LWB_Nutzungsflaechen_V3_0/: LWB_Nutzungsflaechen_Kataloge_V3_0.xml  LWB_Nutzungsflaechen_V3_0.imd
tests/data/models/LWB_Perimeter_LandwirtschaftlicheNutzflaeche_Soemmerung_V2_0/: LWB_Perimeter_LandwirtschaftlicheNutzflaeche_Soemmerung_V2_0.imd
tests/data/models/eCH0271_1/: eCH-0271-1-0-0.ili  (+1 more)
tests/writers/py/: python_structure.py
uml/: index.html
user_guide/cli-binary/: index.html
user_guide/cli-reference/: index.html
user_guide/diagram/: index.html
user_guide/python_classes/: index.html
user_guide/start/: index.html
(+496 files in other folders)
