# BUILD

[build-system]

requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Poetry

# Information required for building (sdist/wheel)
## Also renders on pypi as 'subtitle'
[tool.poetry]
name = "ili2py"
version = "0.0.1"
description = "Your pythonic gateway to INTERLIS"
authors = ["Clemens Rudert <rudert-geoinformatik@posteo.ch>"]
maintainers = ["Clemens Rudert <rudert-geoinformatik@posteo.ch>"]
license = "AGPL-3.0-only"
readme = "README.rst"

homepage = "https://github.com/vvmruder/ili2py"
repository = "https://github.com/vvmruder/ili2py"
documentation = "https://ili2py.readthedocs.io/"

keywords = [
    "python package",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Typing :: Typed"
]

packages = [
    { include = "ili2py", from = "src" },
]

include = [
    { path = "tests", format = "sdist" },
    { path = "docs/**/*.rst", format = "sdist" },
    { path = "docs/conf.py", format = "sdist" },
    { path = "src/**/*.typed", format = "sdist" },
    { path = "src/stubs/*.pyi", format = "sdist" },
    "pyproject.toml",
    "LICENSE",
    "README.rst",
    "CONTRIBUTING.md",
    "CHANGELOG.rst",
]

exclude = [
    "docs/*",
    "requirements/*",
    "scripts/*.py",
    "tox.ini",
    ".circleci/config.yml",
    ".coveragerc",
    ".DS_Store",
    ".gitignore",
    ".prospector.yml",
    ".pylintrc",
    ".readthedocs.yml",
    ".scrutinizer.yml",
    ".travis.yml"
]

# PyPi url links, that appear in 'Project Links' section
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/ili2py/issues"
"CI: Github Actions" = "https://github.com/vvmruder/ili2py/actions"
"Documentation" = "https://ili2py.readthedocs.io/"
"Source Code" = "https://github.com/vvmruder/ili2py"
"Changelog" = "https://github.com/vvmruder/ili2py/blob/master/CHANGELOG.rst"
"Code of Conduct" = "https://github.com/vvmruder/ili2py/blob/master/CONTRIBUTING.rst"



[tool.poetry.dependencies]
python = "^3.8"
lxml = "4.9.3"
six = "1.16.0"
click = "8.1.7"

# Test: packages imported in test code and packages required for the "test runner"
pytest = { version = ">= 6.2.4", optional = true }
pytest-cov = { version = ">= 2.12", optional = true }
pytest-explicit = { version = "~= 1.0.1", optional = true }
pytest-xdist = { version = ">= 1.34", optional = true }

pytest-click = { version = "^1.1.0", optional = true }


# Docs: development and build dependencies
sphinx = { version = "~= 4.0", optional = true }
sphinx-autodoc-typehints = { version = ">= 1.10", optional = true }
sphinx-rtd-theme = { version = "== 0.5.0", optional = true }
sphinxcontrib-spelling = { version = "~= 7.3.3", optional = true }

# Type Checking: packages required for the type check (ie mypy) to pass
mypy = { version = "== 0.961", optional = true }

# Note: "^" is the more conservative compared to "~"
xsdata = {extras = ["cli", "lxml", "soap"], version = "^24.4"}
xsdata-plantuml = "^24.3"

[tool.poetry.extras]
test = [
    "pytest",
    "pytest-cov",
    "pytest-explicit",
    "pytest-xdist",

    "pytest-click",

]
docs = [
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-rtd-theme",
    "sphinxcontrib-spelling",
]
typing = [
    "mypy",
    "types-requests",
    "pytest",
    "pytest-click",
]



[tool.poetry.scripts]
ili2py-imd_json = 'ili2py.cli:imd_json'
ili2py-xtf_json = 'ili2py.cli:xtf_json'
ili2py-imd_xsdata = 'ili2py.cli:imd_xsdata'
ili2py-xtf_reader_classes = 'ili2py.cli:xtf_reader_classes_cli'


[project.entry-points]
"xsdata.plugins.cli" = {xsdata_imd = "ili2py.interfaces.xsdata.hook"}




# TOOLS

[tool.pytest.ini_options]
minversion = "6.2"
addopts = "--strict-markers"
markers = [
    "slow: Marks a slow test",
    "integration: Tests applicable to a newly Generated Project, running with tox",
    "network_bound: Require internet connection",
]
testpaths = [
    "tests",
]


[tool.black]
line-length = 95
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = 'black'

[tool.bandit]
tests = []
skips = [
    "B101",
]

[tool.software-release]
version_variable = "src/ili2py/__init__.py:__version__"
