# BUILD

[build-system]

requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

# Information required for building (sdist/wheel)
## Also renders on pypi as 'subtitle'
[project]
name = "ili2py"
version = "0.0.1"
description = "Your pythonic gateway to INTERLIS"
authors = [
    {name="Clemens Rudert", email="rudert-geoinformatik@posteo.ch"}
]
requires-python = ">=3.11.0"
maintainers = [
    {name="Clemens Rudert", email="rudert-geoinformatik@posteo.ch"}
]
# license = "AGPL-3.0-only"
urls.Tracker = "https://github.com/georama/issues"
urls.CI = "https://github.com/rudert-geoinformatik/ili2py/actions"
urls.Documentation = "https://ili2py.readthedocs.io/"
urls.Source = "https://github.com/rudert-geoinformatik/ili2py"
urls.Changelog = "https://github.com/rudert-geoinformatik/ili2py/blob/master/CHANGELOG.md"
urls.Contributing = "https://github.com/rudert-geoinformatik/ili2py/blob/master/CONTRIBUTING.md"

keywords = [
    "python package",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Typing :: Typed"
]

### Dependency Constraints, aka Requirements ###
dependencies = [
    "six==1.16.0",
    "click==8.1.7",
    "xsdata[cli,lxml,soap]==24.3",
    "xsdata-plantuml==24.3",
    "ruff==0.9.5"
]
optional-dependencies.dev = [
    "pre-commit==4.1.0"
]
# Test: packages imported in test code and packages required for the "test runner"
optional-dependencies.test = [
    "pytest>=6.2.4",
    "pytest-cov>=2.12",
    "pytest-explicit~=1.0.1",
    "pytest-xdist>=1.34",
    "pytest-click>=1.1.0",
    "pytest-run-subprocess==0.10.0"
]
# Type Checking
optional-dependencies.check =[
    "mypy==0.961"
]
# Docs: dev and build dependencies
optional-dependencies.docs = [
    "mkdocs==1.6.1",
    "mkdocs-macros-plugin==1.0.5",
    "mkdocs-material==9.5.34",
    "mkdocs-mermaid2-plugin==1.1.1",
    "mkdocs-section-index==0.3.8",
    "mkdocs-gen-files==0.5.0",
    "mkdocstrings==0.28.2",
    "mkdocstrings-python==1.16.2",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-autorefs==1.4.0",
    "pymdown-extensions==10.5",
    "mkdocs-click==0.8.1",
    "griffe==1.2.0"
]

[tool.setuptools.dynamic]
version = {attr = "ili2py.version"}  # any module attribute compatible with ast.literal_eval
readme = {file = ["README.md", "CHANGELOG.md"]}

[tool.setuptools.packages.find]
where = ["src"]

# TOOLS
[tool.pytest.ini_options]
minversion = "6.2"
addopts = "--strict-markers"
markers = [
    "slow: Marks a slow test",
    "integration: Integration Tests",
    "network_bound: Require internet connection",
]
testpaths = [
    "tests",
]
explicit-only = [
    "integration",
    "network_bound",
]

[tool.black]
line-length = 95
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = 'black'

[tool.bandit]
tests = []
skips = [
    "B101",
]

[tool.software-release]
version_variable = "src/georama/__init__.py:__version__"

[virtualenvs]
create = true
in-project = true
