# BUILD

[build-system]

requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

# Information required for building (sdist/wheel)
## Also renders on pypi as 'subtitle'
[project]
name = "ili2py"
dynamic = ["version"]
description = "Your pythonic gateway to INTERLIS"
authors = [
    {name="Clemens Rudert", email="rudert-geoinformatik@posteo.ch"}
]
requires-python = ">=3.11.0"
maintainers = [
    {name="Clemens Rudert", email="rudert-geoinformatik@posteo.ch"}
]
# license = "AGPL-3.0-only"
urls.Tracker = "https://github.com/georama/issues"
urls.CI = "https://github.com/rudert-geoinformatik/ili2py/actions"
urls.Documentation = "https://ili2py.readthedocs.io/"
urls.Source = "https://github.com/rudert-geoinformatik/ili2py"
urls.Changelog = "https://github.com/rudert-geoinformatik/ili2py/blob/master/CHANGELOG.md"
urls.Contributing = "https://github.com/rudert-geoinformatik/ili2py/blob/master/CONTRIBUTING.md"

keywords = [
    "python package",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Software Distribution",
    "Typing :: Typed"
]

### Dependency Constraints, aka Requirements ###
dependencies = [
    "six==1.16.0",
    "click==8.1.7",
    "xsdata[cli,lxml,soap]==25.7",
    "black==25.1.0",
    "isort==6.0.1",
    "click",
    "autoflake"
]
optional-dependencies.dev = [
    "setuptools-scm>=8",
    "pre-commit==4.1.0",
]
# Test: packages imported in test code and packages required for the "test runner"
optional-dependencies.test = [
    "pytest>=6.2.4",
    "pytest-cov>=2.12",
    "pytest-explicit~=1.0.1",
    "pytest-xdist>=1.34",
    "pytest-click>=1.1.0",
    "pytest-run-subprocess==0.10.0",
    "pytest-resource-path==1.4.0"
]
# Type Checking
optional-dependencies.check =[
    "mypy==0.961"
]
# Docs: dev and build dependencies
optional-dependencies.docs = [
    "mkdocs==1.6.1",
    "mkdocs-macros-plugin==1.0.5",
    "mkdocs-material==9.5.34",
    "mkdocs-mermaid2-plugin==1.1.1",
    "mkdocs-section-index==0.3.8",
    "mkdocs-gen-files==0.5.0",
    "mkdocstrings==0.28.2",
    "mkdocstrings-python==1.16.2",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-autorefs==1.4.0",
    "pymdown-extensions==10.5",
    "mkdocs-click==0.8.1",
    "griffe==1.2.0"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md", "CHANGELOG.md"]}

[tool.setuptools.packages.find]
where = ["src"]

# TOOLS
[tool.pytest.ini_options]
minversion = "6.2"
addopts = "--strict-markers"
markers = [
    "slow: Marks a slow test",
    "integration: Integration Tests",
    "network_bound: Require internet connection",
]
testpaths = [
    "tests",
]
explicit-only = [
    "integration",
    "network_bound",
]
"resource-path.directory-name-test-resources" = "data"

[tool.black]
line-length = 100
target-version = ["py313"]
skip-string-normalization = false
skip-magic-trailing-comma = false

[tool.isort]
profile = 'black'
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true  # Optional: erlaubt automatisches Fixen per CLI
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP",  # pyupgrade
    "C90",  # mccabe complexity
]
ignore = [
    "E501"  # Zeilenlänge ignorieren, da Black das übernimmt
]

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
in-place = true
recursive = true
ignore-init-module-imports = true


[tool.bandit]
tests = []
skips = [
    "B101",
]

[tool.software-release]
version_variable = "src/georama/__init__.py:__version__"

[virtualenvs]
create = true
in-project = true
